hphp/hack/test/typecheck/duplicate_class_declaration.php
<?hh

class Foo { public function foo(): void {} }
class Foo { public function bar(): void {} } // error

function f(): void {
  $foo = new Foo();
  $foo->foo(); // ok
  $foo->bar(); // error
}
